# steshaw.github.io

./: CNAME  about.html  archive.html  atom.xml  contact.html  index.html  posts.html  rss.xml
about/: index.html
all-posts/: index.html
archives/: index.html
css/: default.css  syntax-figure.css  syntax.css
drafts/: index.html
ideas/: index.html
js/: blog.js  header.js  octopressify.js
notes/: bio-next-role.html  bio.html  category-theory.html  chess.html  content-management-systems.html  current.html  data-visualisation.html  distributed-systems.html  erlang.html  focus.html  goals.html  idris-dev.html  idris.html  index.html  kubernetes.html  lambda-jam-2014.html  machine-learning.html  modules-reader-cake.html  monad-v-comonad.html  nix.html  package-system.html  parsing.html  ports.html  projects.html  rails-gems.html  reader-with-annotations.html  recommended-companies.html  research-interests.html  songs.html  songs.org  succinct-data-structures.html  todo.html  tooling-friendly-PLs.html  ugh.html  web-design.html
posts/: 2004-08-09-neverwinter-nights-on-linux.html  2004-08-14-the-python-paradox.html  2004-08-18-pairs-as-lambdas.html  2004-08-22-erlang-the-movie.html  2004-08-22-swingworker-race-condition.html  2004-08-29-the-koan-of-side-effects.html  2004-08-30-abelson-and-sussman-lectures.html  2004-08-30-realplayer10-on-linux.html  2004-08-30-spring-and-hibernate.html  (+82 more)
talks/testing-properties-with-quickcheck/quickcheck-examples/: quickcheck-examples.cabal
talks/testing-properties-with-quickcheck/quickcheck-examples/src/: Main.hs
(+693 files in other folders)
