name:                quickcheck-examples
version:             0.1.0.0
synopsis:            QuickCheck examples
description:         QuickCheck examples
license:             BSD2
license-file:        LICENSE—BSD2
author:              Steven Shaw
maintainer:          steven@steshaw.org
homepage:            http://steshaw.org
copyright:           © 2015 Steven Shaw
category:            Example
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:steshaw/quickcheck-examples

executable quickcheck-examples
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
